-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
-
9ea8f5c95 (master)
There is a small glitch when opening a "small" file (i.e number of lines is smaller than space available).
When opening a file, the text cursor is set to the position where the file has last been open. this line well be centered vertically on the screen. this means that the topmost line shown, is not the first line. however in this case, scrolling seems to be disabled: there's neither a scroll bar nor does the mouse wheel allow me to scroll to the first line. i can only scroll to the first line by navigating the text cursor to the top.
steps to reproduce:
- open a small file with e.g. 50ish lines
- move text cursor to bottom
- close file
- re-open file
current behaviour:
- no scrollbar, no mouse wheel scrolling
- only navigating text cursor works
expected behaviour:
- scrollbar when top-most line is not the first line
- one could argue that one should not center the text cursor vertically, if the text cursor is in the bottom lines (lots of empty space in the bottom half of the screen)