Utils: fix setTopBlock for blocks close to the bottom of the file

This ensures we do not set the top block number to a value that is not
reachable with the current scrollbar max value.

Fixes: QTCREATORBUG-33319
Change-Id: I150c4ba420416b059302848437fc5041e1dcdc0e
Reviewed-by: Orgad Shaneh <orgads@gmail.com>